k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service-2
  namespace: default
spec:
  type: NodePort
  selector:
    app: go-service-2
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30081
